Minor id change

--- a/dossier/app/components/formulations/tpl-active-ing-record_20170110_0827.html
+++ b/dossier/app/components/formulations/tpl-active-ing-record_20170110_0827.html
@@ -138,7 +138,7 @@
                 </div>
                 <div class="form-group col-lg-4 col-md-4 col-sm-4 col-xs-12"
                      ng-class="{'has-error':ingRecCtrl.activeIngForm.animaHumanSourced.$invalid}">
-                    <label for="asBase" class="required">
+                    <label for="animalHumanSourced" class="required">
                         <span class="field-name">{{'ANIMAL_HUMAN_SOURCED'|translate}}</span>
                         <strong class="required">{{"REQUIRED" |translate}}</strong>
                         <select id="animalHumanSourced" ng-model="ingRecCtrl.ingModel.humanAnimalSourced"
